Add highlighting to navbar and create Students page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HomePage</title>
   <link rel="stylesheet" href="style.css">
-  <!-- <script src="script.js" defer></script> -->
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="mainpage">
     <nav class="sidebar">
       <ul>
-        <li id="HomePage">HomePage</li>
-        <li id="Students">Students</li>
+        <li>HomePage</li>
+        <li>Students</li>
       </ul>
     </nav>
 
