Create student form inputs

--- a/Students.html
+++ b/Students.html
@@ -6,8 +6,20 @@
   <title>Document</title>
 </head>
 <body>
-  <div>
-    Student Page
+  <div class="studentForm">
+    <div>
+      <label for="firstName">First Name:</label>
+      <input type="text" placeholder="John" id="firstName">
+    </div>
+    <div>
+      <label for="lastName">Last Name:</label>
+      <input type="text" placeholder="Smith" id="lastName">
+    </div>
+    <div>
+      <label for="birthday">Birthday:</label>
+      <input type="date" id="birthday">
+    </div>
+    <button id="studentFormSubmit"> Submit </button>
   </div>
 </body>
 </html>
