--- a/HomePage.html
+++ b/HomePage.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    ShyftLabs Assignment
+    <h1>
+      ShyftLabs Assignment
+    </h1>
+    <h2 style="text-align: center;">
+      Nicholas Vertentes
+    </h2>
+
   </body>
 </html>
