add Student for header

--- a/Students.html
+++ b/Students.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+  <h1 style="text-align: center;">
+    Student Form
+  </h1>
   <div class="studentForm">
     <div>
       <label for="firstName">First Name:</label>
